@@ -96,7 +96,7 @@ const char *node_id                = "node_id";
 const char *architecture           = "architecture";
 const char *state                  = "state";
 const char *role                   = "role";
-const char *interactive_caps       = "INTERACTIVE";
+const char *batch_caps             = "BATCH";
 const char *success                = "SUCCESS";
 const char *status                 = "status";
 const char *clock_mhz              = "clock_mhz";
